<resources>
    <string name="app_name">Alicisindan</string>
    <string name="alicisindan">Alicisindan</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="no_account">No Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_already_an_account">Have Already an Account?</string>
    <string name="i_have_read_and_acknowledged_the_terms_services"><![CDATA[I have read and acknowledged the Terms & Services]]></string>
    <string name="title_activity_phone">PhoneActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="what_is_your_phone_number">What Is Your Phone Number?</string>
    <string name="please_enter_your_phone_number_to_verify_your_account">Please enter your phone number to verify your account</string>
    <string name="phoneNo">(535) 123 45 67</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="please_enter_code_sent_to">Please enter Code sent to</string>
    <string name="verify">Verify</string>
    <string name="_0">0</string>
    <string name="categories">Categories</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="my_posts">My Posts</string>
    <string name="full_name">Full Name</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_out">Log Out</string>
    <string name="help">Help</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="messages">Messages</string>
    <string name="featured">Featured</string>
    <string name="see_all">See All</string>
    <string name="notification_icon">notification_icon</string>
    <string name="profile">Profile</string>
    <string name="forum">Forum</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="home">Home</string>
    <string name="send_verification_code">Send Verification Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="text_alert">IMPORTANT! PLEASE READ!\n\nPlease continue using the given id convention: For any item on your XML file, do:\n android:id = +@+id/activityName_viewType_nameOfView\nFor example, an EditText in HomeFragment that will hold the app\'s name should have an id like \"@+id/homeFragment_editText_appName\". \nSimilarly, \"@+id/homeFragment_layout_top\" is the id of the Layout(constraint) on top of HomeFragment.\n\nAlso, continue using this convention in your Java files as well: For example, do something like \nViewType viewType_viewName\nwhen naming views. For example, something like\nEditText editText_appName\nwould work for the previous example. All this is because when you call findViewById(R.id.) function, android studio lists ALL views on the ENTIRE project. Everything gets mixed up if we don\'t use a naming convention that uses descriptive names.\n\nAlso, adding functionality to a Fragment is similar to an Activity. In summary, instead of Activity OnCreate method, you write your code in Fragment onCreateView method. Instead of creating an Intent and startActivity method to change into another screen, you use loadFragment method. Refer to implemented fragments to see this method. There are more things to discuss here, but see HomeFragment and ProfileFragment as working examples of Fragments and for further information. If there are functionalities you wish to add to a fragment, you can ask me about them.\n GL\n\n NullPointerException xd</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="surname">Surname</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="report">Report</string>
    <string name="ban">Ban</string>
    <string name="type_a_message">Type a message</string>
    <string name="i_want_to_buy">I want to buy...</string>
    <string name="select_a_category">Select a category...</string>
    <string name="selected_category">Selected category</string>
    <string name="change">Change</string>
    <string name="give_us_more_information">Give us more information</string>
    <string name="brand">Brand</string>
    <string name="details">Details</string>
    <string name="price">Price</string>
    <string name="condition">Condition</string>
    <string name="title">Title</string>
</resources>