<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ui.login.PhoneActivity">

    <FrameLayout
        android:id="@+id/phoneActivity_frameLayout_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/background_top_widget"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_32sdp">

        <TextView
            android:id="@+id/phoneActivity_textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/lato_bold"
            android:text="@string/what_is_your_phone_number"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sdp" />
    </FrameLayout>

    <TextView
        android:id="@+id/phoneActivity_textView_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:fontFamily="@font/lato"
        android:text="@string/please_enter_your_phone_number_to_verify_your_account"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_12ssp" />

    <LinearLayout
        android:id="@+id/phoneActivity_linearLayout_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/background_edit_text"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/phoneActivity_countryPicker"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" />

        <EditText
            android:id="@+id/phoneActivity_editText_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@null"
            android:fontFamily="@font/lato"
            android:hint="@string/phoneNo"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textColor="@color/primary_text" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/phoneActivity_button_verification"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/background_main_button"
        android:fontFamily="@font/lato_bold"
        android:text="@string/send_verification_code"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:id="@+id/phoneActivity_button_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/sign_in"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_16ssp" />

</LinearLayout>
