<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ui.login.SignInActivity">

    <FrameLayout
        android:id="@+id/signInActivity_frameLayout_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/background_top_widget"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_32sdp">

        <TextView
            android:id="@+id/signInActivity_textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/lato_bold"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sdp" />
    </FrameLayout>

    <EditText
        android:id="@+id/signInActivity_editText_emailOrPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_64sdp"
        android:background="@drawable/background_edit_text"
        android:fontFamily="@font/lato"
        android:hint="@string/email_or_phone_number"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_16sdp"
        android:textColor="@color/primary_text" />

    <EditText
        android:id="@+id/signInActivity_editText_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/background_edit_text"
        android:fontFamily="@font/lato"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_16sdp"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/signInActivity_button_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/no_account"
        android:textColor="@color/yellow" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInActivity_button_signIn"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_main_button"
        android:fontFamily="@font/lato_bold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:id="@+id/signInActivity_textView_loginVia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_64sdp"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/yellow" />

    <LinearLayout
        android:id="@+id/signInActivity_linearLayout_loginVia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_4sdp">

        <ImageButton
            android:id="@+id/signInActivity_button_google"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@drawable/background_google_button" />

        <ImageButton
            android:id="@+id/signInActivity_button_facebook"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:background="@drawable/background_facebook_button" />

        <ImageButton
            android:id="@+id/signInActivity_button_twitter"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:background="@drawable/background_twitter_button" />

    </LinearLayout>

</LinearLayout>