<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingBottom="@dimen/_20sdp"
    android:scrollbars="none"
    tools:context=".activities.ui.login.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signUpActivity_frameLayout_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:background="@drawable/background_top_widget"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_16sdp">

            <ImageView
                android:id="@+id/activitySignUp_imageView_closeIcon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/signUpActivity_textView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/lato_bold"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_24sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activitySignUp_imageView_closeIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/signUpActivity_editText_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"

                android:layout_weight="1"
                android:background="@drawable/background_edit_text"
                android:fontFamily="@font/lato"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="@dimen/_16sdp"
                android:textColor="@color/primary_text" />

            <EditText
                android:id="@+id/signUpActivity_editText_surname"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/background_edit_text"
                android:fontFamily="@font/lato"
                android:hint="@string/surname"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="@dimen/_16sdp"
                android:textColor="@color/primary_text" />

        </LinearLayout>

        <EditText
            android:id="@+id/signUpActivity_editText_userName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/background_edit_text"
            android:fontFamily="@font/lato"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textColor="@color/primary_text" />

        <EditText
            android:id="@+id/signUpActivity_editText_emailOrPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/background_edit_text"
            android:fontFamily="@font/lato"
            android:hint="@string/email_or_phone_number"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textColor="@color/primary_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_24sdp"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/signUpActivity_editText_country"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_weight="2"
                android:background="@drawable/background_edit_text"
                android:fontFamily="@font/lato"
                android:hint="@string/country"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingHorizontal="@dimen/_16sdp"
                android:textColor="@color/primary_text" />

            <AutoCompleteTextView
                android:id="@+id/signUpActivity_editText_city"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_weight="2"
                android:background="@drawable/background_edit_text"
                android:fontFamily="@font/lato"
                android:hint="@string/city"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingHorizontal="@dimen/_16sdp"
                android:textColor="@color/primary_text" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:fontFamily="@font/lato"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:textColor="@color/primary_text"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpActivity_editText_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_edit_text"
                android:fontFamily="@font/lato"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_16sdp"
                android:textSize="@dimen/_14ssp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:fontFamily="@font/lato"
            android:hint="@string/confirm_password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:textColor="@color/primary_text"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpActivity_editText_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_edit_text"
                android:fontFamily="@font/lato"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_16sdp"
                android:textSize="@dimen/_14ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/signUpActivity_button_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/lato"
            android:text="@string/have_already_an_account"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_11ssp" />

        <CheckBox
            android:id="@+id/signUpActivity_checkBox_termsAndServices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:buttonTint="@color/primary"
            android:text="@string/i_have_read_and_acknowledged_the_terms_services"
            android:textSize="@dimen/_11ssp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpActivity_button_signUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_main_button"
                android:fontFamily="@font/lato_bold"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

            <ProgressBar
                android:id="@+id/signInActivity_progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>

