<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_100sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/person_image_1"
        app:layout_constraintBottom_toBottomOf="@id/frameLayoutBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/widget"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginBottom="@dimen/_200sdp"
        android:background="@drawable/splash_widget_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/frameLayoutBottom" />

    <LinearLayout
        android:id="@+id/frameLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_232sdp"
        android:background="@drawable/splash_text_background"
        android:orientation="vertical"
        android:padding="@dimen/_32sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/alicisindan"
            android:textColor="@color/white"
            android:textSize="@dimen/_32ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/lato"
            android:text="@string/lorem"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:background="@drawable/main_button_background"
            android:fontFamily="@font/lato_bold"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>